Fix about bg image position to prevent overflow

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -49,7 +49,7 @@
 		}
 
 		&--yellow-bottom {
-			transform: translate(1183px, 181px);
+			transform: translate(961px, 212px);
 		}
 	}
 
